--- a/style-rtl.css
+++ b/style-rtl.css
@@ -4,7 +4,7 @@ Theme URI: https://vitathemes.com/theme/wp-meliora/
 Author: VitaThemes
 Author URI: https://vitathemes.com
 Description: A minimal & mobile-first blog theme. The best choice for people who want to start blogging as soon as possible.
-Version: 1.1.3
+Version: 1.2.0
 Tested up to: 5.7
 Requires PHP: 5.6
 License: GPL-2.0-or-later
@@ -668,6 +668,10 @@ big {
 
 /* Elements
 --------------------------------------------- */
+html {
+	scroll-behavior: smooth;
+}
+
 body {
 	background: #fff;
 	font-family: "Roboto Mono", Arial;
@@ -2498,7 +2502,7 @@ ol.children {
 	justify-content: space-between;
 }
 
-@media only screen and (min-width: 1140px) {
+@media only screen and (min-width: 980px) {
 	.c-footer__grid {
 		flex-wrap: nowrap;
 	}
@@ -2535,7 +2539,7 @@ ol.children {
 	padding: 0 15px;
 }
 
-@media only screen and (min-width: 1140px) {
+@media only screen and (min-width: 980px) {
 	.c-footer__socials {
 		width: auto;
 		margin-top: 0;
@@ -2561,7 +2565,7 @@ ol.children {
 	margin-bottom: 32px;
 }
 
-@media only screen and (min-width: 980px) {
+@media only screen and (min-width: 1140px) {
 	.c-footer__branding {
 		margin-left: 42px;
 		margin-bottom: 0;
@@ -2575,6 +2579,127 @@ ol.children {
 .s-footer-branding img {
 	height: 28px;
 	width: auto;
+}
+
+.c-footer__widgets {
+	margin-top: 64px;
+	padding: 0 15px;
+}
+
+.c-footer__widget-area__column {
+	width: 100%;
+}
+
+.c-footer__widget-area__column:nth-of-type(1) {
+	margin-bottom: 40px;
+}
+
+@media only screen and (min-width: 980px) {
+	.c-footer__widget-area__column {
+		width: 50%;
+	}
+	.c-footer__widget-area__column:nth-of-type(1) {
+		margin-left: 32px;
+		margin-bottom: 0;
+	}
+	.c-footer__widget-area__column:nth-of-type(2) {
+		margin-right: 32px;
+	}
+}
+
+.c-footer__widget-area {
+	display: flex;
+	flex-wrap: wrap;
+}
+
+@media only screen and (min-width: 980px) {
+	.c-footer__widget-area {
+		flex-wrap: nowrap;
+	}
+}
+
+.s-footer-widgets input[type="text"],
+.s-footer-widgets input[type="email"],
+.s-footer-widgets input[type="url"],
+.s-footer-widgets input[type="password"],
+.s-footer-widgets input[type="search"],
+.s-footer-widgets input[type="number"],
+.s-footer-widgets input[type="tel"],
+.s-footer-widgets input[type="range"],
+.s-footer-widgets input[type="date"],
+.s-footer-widgets input[type="month"],
+.s-footer-widgets input[type="week"],
+.s-footer-widgets input[type="time"],
+.s-footer-widgets input[type="datetime"],
+.s-footer-widgets input[type="datetime-local"],
+.s-footer-widgets input[type="color"],
+.s-footer-widgets textarea {
+	color: #474747;
+	border: none;
+	border-radius: 3px;
+	background-color: #DFDFDF;
+	padding-left: 8px;
+	padding-right: 14px;
+	padding-top: 13px;
+	padding-bottom: 13px;
+	font-size: 0.75rem;
+	line-height: 1.5em;
+}
+
+.s-footer-widgets input[type="text"]::placeholder,
+.s-footer-widgets input[type="email"]::placeholder,
+.s-footer-widgets input[type="url"]::placeholder,
+.s-footer-widgets input[type="password"]::placeholder,
+.s-footer-widgets input[type="search"]::placeholder,
+.s-footer-widgets input[type="number"]::placeholder,
+.s-footer-widgets input[type="tel"]::placeholder,
+.s-footer-widgets input[type="range"]::placeholder,
+.s-footer-widgets input[type="date"]::placeholder,
+.s-footer-widgets input[type="month"]::placeholder,
+.s-footer-widgets input[type="week"]::placeholder,
+.s-footer-widgets input[type="time"]::placeholder,
+.s-footer-widgets input[type="datetime"]::placeholder,
+.s-footer-widgets input[type="datetime-local"]::placeholder,
+.s-footer-widgets input[type="color"]::placeholder,
+.s-footer-widgets textarea::placeholder {
+	color: #474747;
+	opacity: 1;
+}
+
+.s-footer-widgets input[type="text"]:focus,
+.s-footer-widgets input[type="email"]:focus,
+.s-footer-widgets input[type="url"]:focus,
+.s-footer-widgets input[type="password"]:focus,
+.s-footer-widgets input[type="search"]:focus,
+.s-footer-widgets input[type="number"]:focus,
+.s-footer-widgets input[type="tel"]:focus,
+.s-footer-widgets input[type="range"]:focus,
+.s-footer-widgets input[type="date"]:focus,
+.s-footer-widgets input[type="month"]:focus,
+.s-footer-widgets input[type="week"]:focus,
+.s-footer-widgets input[type="time"]:focus,
+.s-footer-widgets input[type="datetime"]:focus,
+.s-footer-widgets input[type="datetime-local"]:focus,
+.s-footer-widgets input[type="color"]:focus,
+.s-footer-widgets textarea:focus {
+	color: #000000;
+}
+
+.s-footer-widgets select {
+	color: #474747;
+	border: none;
+	border-radius: 3px;
+	background-color: #DFDFDF;
+	padding: 10px 14px;
+}
+
+.s-footer-widgets textarea {
+	width: 100%;
+}
+
+.s-footer-widgets ul {
+	margin-right: 0;
+	margin-left: 0;
 }
 
 /*--------------------------------------------------------------
