--- a/style.css
+++ b/style.css
@@ -866,6 +866,7 @@ input[type="datetime-local"]:focus,
 input[type="color"]:focus,
 textarea:focus {
 	color: #000000;
+	outline: var(--wp-meliora-primary-color) solid 2px;
 }
 
 select {
